--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -18,6 +18,8 @@ figment = { version = "0.10.7", features = ["toml", "env"] }
 serde_yaml = "0.9.14"
 strum = { version = "0.26.2", features = ["derive"] }
 
+httpmock = { version = "0.6.0" }
+
 common = { path = "../common" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
